packages/konduktor-nightly/konduktor_nightly-0.1.0.dev20260130110510.tar.gz/konduktor_nightly-0.1.0.dev20260130110510/konduktor/manifests/dmesg_daemonset.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dmesg-logging
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: dmesg
  namespace: dmesg-logging
  labels:
    k8s-app: dmesg-logging
spec:
  selector:
    matchLabels:
      name: dmesg
  template:
    metadata:
      labels:
        name: dmesg
    spec:
      tolerations:
      # these tolerations are to have the daemonset runnable on control plane nodes
      # remove them if your control plane nodes should not run pods
      - key: "nvidia.com/gpu"
        operator: "Equal"
        value: "present"
        effect: "NoSchedule"
      - key: "trainy.konduktor.ai/faulty"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      - key: "cloud.google.com/gke-queued"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      containers:
      - name: dmesg
        image: ubuntu:22.04
        # required for running `dmesg`
        securityContext:
          privileged: true
        command:
        - sh
        - -c
        - >
          dmesg -w
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
      # it may be desirable to set a high priority class to ensure that a DaemonSet Pod
      # preempts running Pods
      # priorityClassName: important
      terminationGracePeriodSeconds: 30
