packages/konduktor-nightly/konduktor_nightly-0.1.0.dev20260130110510.tar.gz/konduktor_nightly-0.1.0.dev20260130110510/konduktor/manifests/pod_cleanup_controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-cleanup-controller
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-cleanup-controller
  template:
    metadata:
      labels:
        app: pod-cleanup-controller
    spec:
      serviceAccountName: pod-cleanup-controller
      containers:
      - name: controller
        image: python:3.10
        command: ["/bin/sh", "-c"]
        args: ["pip install kubernetes && echo 'starting controller' && python /app/controller.py"]
        volumeMounts:
        - name: controller-code
          mountPath: /app
      volumes:
      - name: controller-code
        configMap:
          name: pod-cleanup-controller-code
